# warm-start-ot

./: .gitignore  LICENSE  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
java/src/main/java/optimaltransport/: GTTransport.java  Mapping.java  ScaledGTTransport.java  ScaledMapping.java
legacy-matlab/: ScaledSmallDelta.m
tests/: test_smoke.py
warmstart_ot/: __init__.py  _jvm.py  solver.py
